SPRING DYNAMIC MODULES FRAMEWORK CHANGELOG
==========================================
http://www.springframework.org/osgi

Changes in version 1.2.0 RC1 (2009-xx-yy)
-----------------------------------------


Changes in version 1.2.0 M2 (2008-11-24)
----------------------------------------

General
* upgraded to Spring Framework 2.5.6
* raised required Spring Framework version to 2.5.6
* upgraded to Knopflerfish 2.1.1
* aligned bundle symbolic names to Spring convention (changed prefix org.springframework.bundle.osgi. to 
  org.springframework.osgi. )
* added support for compendium namespace (managed-service, config-properties)
* incremented version of spring-osgi.xsd and spring-osgi-compendium.xsd

Package org.springframework.osgi.context
* removed deprecated method AbstractDelegatedExecutionApplicationContext#getContextClassLoader
* introduced dedicated PostProcessor interfaces aware of DelegatedExecutionOsgiBundleApplicationContext's multi-stage
  refresh

Package org.springframework.osgi.extender
* improved shutdown algorithm to deal with self-referenced and transitive service references

Package org.springframework.osgi.io
* improved existence check for bundle resources
* fixed manifest headers parsing problem when dealing with nested whitespaces
* fixed handling of optional required bundles
* improved OsgiBundlePatternMatchingResolver to return ContextResources
* changed OsgiBundlePatternMatchingResolver#findResources(String) visibility to protected

Package org.springframework.osgi.service
* refined single service proxies so that any waiting activity is interrupted on destruction
* improved single service proxies to allow settings update at runtime
* deprecated retryTimes parameter in OsgiServiceProxyFactoryBean
* added a weak cache to prevent the creation of identical proxies when publishing scoped beans with managed context
  class loader
* improved the proxy creation (when needed) for bean publishing


Changes in version 1.2.0 M1 (2008-09-05)